[package]
name = "gradonacci"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
bevy = { version = "0.16.0", features = [
    "wayland",
    "dynamic_linking",
    "bevy_dev_tools",
] }
bevy-fps-counter = "0.7.0"
rand = "0.9.1"
